--- a/Diagnosis.App/Controls/CardParts/CardItem.xaml
+++ b/Diagnosis.App/Controls/CardParts/CardItem.xaml
@@ -8,6 +8,7 @@
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
              mc:Ignorable="d"
+             Tag="{Binding HolderVm}"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Style>
         <Style TargetType="UserControl">
@@ -16,7 +17,7 @@
     </UserControl.Style>
 
     <UserControl.ContextMenu>
-        <ContextMenu>
+        <ContextMenu DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
             <MenuItem Header="Редактировать" InputGestureText="F2" Command="{Binding EditCommand}" />
             <MenuItem Header="Добавить курс" Command="{Binding StartCourseCommand}" />
             <MenuItem Header="Добавить осмотр" Command="{Binding AddAppointmentCommand}" />
