xaml. remove duplicate Age converters

--- a/Diagnosis.App/Controls/Editors/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/AgePicker.xaml
@@ -41,7 +41,7 @@
                 </controls:WatermarkService.Watermark>
             </TextBox>
 
-            <TextBlock Text="{Binding Age, Converter={StaticResource ageLabel}}" Margin="3,0,0,0" VerticalAlignment="Center"></TextBlock>
+            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" Margin="3,0,0,0" VerticalAlignment="Center"></TextBlock>
         </DockPanel>
     </WrapPanel>
 </UserControl>
